# Clutch

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  main.cpp  mat4_benchmark.cpp  vec4_benchmark.cpp
include/: commons.hpp  intrinsics.hpp  lookat.hpp  mat2.hpp  mat3.hpp  mat4.hpp  projections.hpp  qualifier.hpp  transforms.hpp  vec2.hpp  vec3.hpp  vec4.hpp
test/: CMakeLists.txt  lookat_test.cpp  mat2_test.cpp  mat3_test.cpp  mat4_test.cpp  transforms.cpp  vec2_test.cpp  vec3_test.cpp  vec4_test.cpp
